--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">dlib-android-application</string>
+    <string name="app_name">Virtual Fitting Room</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string-array name="category_arr">
+        <item>Hat</item>
+        <item>Glasses</item>
+        <item>Earrings</item>
+        <item>Necklace</item>
+    </string-array>
     <string name="action_settings">Settings</string>
-    <string name="description_info">Select an image or open camera</string>
-    <string name="request_permission">This sample needs camera permission.</string>
-    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string name="title_activity_display_result">DisplayResultActivity</string>
 </resources>
